Frase ristultati cmabiata

--- a/Dcase2017_task2_tech_report.tex
+++ b/Dcase2017_task2_tech_report.tex
@@ -294,7 +294,7 @@ $\theta=0.20$, $M=70$, $k=11$.
  \end{table} 
 
 
-With respect to the DCASE 2017 baseline system the improvement in terms of error rate reduction is equal to 0.35. In Table \ref{tbl:finalScore} are reported the scores for the two stages of the proposed system and the baseline.
+With respect to the DCASE 2017 baseline system the improvement in terms of error rate reduction is equal to 0.35. In Table \ref{tbl:finalScore} are reported the scores for the proposed system and the baseline.
 
 \subsection{Results on Evaluation dataset}
 The parameters used for the different submitted systems for the task 2 of DCASE 2017 challenge are reported in table \ref{tbl:submitted-params}.
