Complete "results on evaluation" section
Ho esteso la tabella e descritto i risultati

--- a/refs.bib
+++ b/refs.bib
@@ -36,7 +36,9 @@
 @Misc{dcase2017web,
   howpublished = {\url{http://www.cs.tut.fi/sgn/arg/dcase2017/}}
 }
-
+@Misc{dcase2017webResultsTask2,
+	howpublished = {\url{http://www.cs.tut.fi/sgn/arg/dcase2017/challenge/task-rare-sound-event-detection-results}}
+}
 @Misc{ieeedjo,
   howpublished = {\url{http://www.ieee.org/portal/pages/pubs/confpubcenter/register.html}}
 }
