--- a/Dcase2017_task2_tech_report.tex
+++ b/Dcase2017_task2_tech_report.tex
@@ -233,6 +233,7 @@ To design the best CNN model for our purposes, we generated a shuffle stratified
 
 
 \subsection{Evaluation Phase}
+\label{sec:Evaluation_Phase}
 %Descrizione con img della fase di valutazione
 %Scelta th 0.20 invece c he 0.25: per favorile meno deletion a discapito delle insertion. La cnn pensa a eliminare le insertion classificandole come bck
 Once the best performing models were found, during the validation stage we performed a fine tuning of the post processing parameters of the MLP-based event detection in order to assess the performance of the whole system. In fact, the hierarchical architecture of the algorithm permits to set a lower threshold in the first decision stage in order to reduce the deletions to the detriment of some insertions. They are removed by the successive decision stage making use of the multi-scale processing acted by the CNN. 
@@ -297,25 +298,29 @@ $\theta=0.20$, $M=70$, $k=11$.
 With respect to the DCASE 2017 baseline system the improvement in terms of error rate reduction is equal to 0.35. In Table \ref{tbl:finalScore} are reported the scores for the proposed system and the baseline.
 
 \subsection{Results on Evaluation dataset}
-The parameters used for the different submitted systems for the task 2 of DCASE 2017 challenge are reported in table \ref{tbl:submitted-params}.
+For the evaluation phase the system has been submitted with 4 configurations in which the threshold has been varied. The value of the threshold and the corresponding results for each of the four submitted configurations are reported in Table \ref{tbl:submitted-params}. The first column represent the submission label that can be found on the result page of the DCASE2017 (task 2) web site \cite{dcase2017webResultsTask2}.
+The best results was obtained with the lower threshold for the MLP stage. As explained in section \ref{sec:Evaluation_Phase} in this conditions the first stage generates more false positive with the corresponding increase of the true positive, leaving to the CNN refinement stage the task of eliminating false alarms.
 
 \begin{table}[t]
 	\caption{Post processing parameters for submitted systems. Only the threshold is varied, $M = 70$ and $k=11$.}
 	\label{tbl:submitted-params}
 	\centering
 	\footnotesize
-	\begin{tabular} {| c | c |}
+	\begin{tabular} {| c | c | c | c | c | c | }
 		\hline
-		Parameter     & Submission label\\  
+ 		& & \multicolumn{2}{c|}{Evaluation}&\multicolumn{2}{c|}{Development}\\
+ 		\hline 
+		Label &$\theta$    & ER &  F-score & ER &  F-score\\  
 		\hline
+
+%		Vesperini\_UNIVPM\_task2\                          
+		1 &$0.18$  &0.3267&83.9 &0.20&89.8 \\
 		\hline                                     
-		$\theta=0.18$ & Vesperini\_UNIVPM\_task2\_1 \\
-		\hline                                     
-		$\theta=0.198$ & Vesperini\_UNIVPM\_task2\_2 \\
+		2 &$0.198$ &0.3440&	82.8&0.18&90.8  \\
 		\hline
-		$\theta=0.20$ & Vesperini\_UNIVPM\_task2\_3 \\
+		3 &$0.20$  &0.3267 &	83.2 &	0.18&	90.8\\
 		\hline   
-		$\theta=0.22$ & Vesperini\_UNIVPM\_task2\_4 \\
+		4 &$0.22$ &0.3267	&83.2 &	0.19&	90.4\\
 		\hline                                       
 	\end{tabular}
 \end{table}
